// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox styled components StyledCheckmark : has correct styles when  1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFill",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickBorder",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary600",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary600",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary500",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary400",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $disabled $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFillDisabled",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.mono600%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickFillDisabled",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $disabled 1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFillDisabled",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickFillDisabled",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFillActive",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickBorder",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative600",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative600",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative500",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative400",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%20%20%3Cpath%0A%20%20%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20clip-rule%3D%22evenodd%22%0A%20%20%20%20%20%20%20%20d%3D%22M10.6%200.200059C11.0418%200.53143%2011.1314%201.15823%2010.8%201.60006L4.8%209.60006C4.62607%209.83197%204.36005%209.97699%204.07089%209.99754C3.78173%2010.0181%203.49788%209.91215%203.29289%209.70717L0.292893%206.70717C-0.0976311%206.31664%20-0.0976311%205.68348%200.292893%205.29295C0.683417%204.90243%201.31658%204.90243%201.70711%205.29295L3.89181%207.47765L9.2%200.400059C9.53137%20-0.0417689%2010.1582%20-0.131312%2010.6%200.200059Z%22%0A%20%20%20%20%20%20%20%20fill%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative200",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative200",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative100",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative50",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFillActive",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickBorder",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.tickFillHover",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.tickBorder",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isIndeterminate 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary400",
  "backgroundImage": "url('data:image/svg+xml;charset=utf8,%0A%20%20%20%20%3Csvg%20width%3D%2212%22%20height%3D%222%22%20viewBox%3D%220%200%2012%202%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cline%0A%20%20%20%20%20%20x1%3D%221%22%0A%20%20%20%20%20%20y1%3D%22-1%22%0A%20%20%20%20%20%20x2%3D%2211%22%0A%20%20%20%20%20%20y2%3D%22-1%22%0A%20%20%20%20%20%20transform%3D%22translate(0%202)%22%0A%20%20%20%20%20%20stroke%3D%22%24theme.colors.tickMarkFill%22%0A%20%20%20%20%20%20stroke-width%3D%222%22%0A%20%20%20%20%20%20stroke-linecap%3D%22round%22%0A%20%20%20%20%2F%3E%0A%20%20%20%20%3C%2Fsvg%3E%0A%20%20');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "boxSizing": "border-box",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale700",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale0",
  "marginRight": "$theme.sizing.scale0",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale700",
}
`;

exports[`Checkbox styled components StyledInput : StyledInput has correct styles 1`] = `
Object {
  "height": 0,
  "margin": 0,
  "opacity": 0,
  "overflow": "hidden",
  "padding": 0,
  "position": "absolute",
  "width": 0,
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when  1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingLeft": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when $isError 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingLeft": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when disabled 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingLeft": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to bottom 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingTop": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to left 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingRight": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to right 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingLeft": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to top 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "24px",
  "paddingBottom": "$theme.sizing.scale300",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledRoot : StyledRoot has correct styles 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedbottom 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedleft 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedright 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedtop 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledToggle StyledToggle snap: StyledToggle has correct default styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.borders.border300.borderColor",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "$theme.borders.border300.borderStyle",
  "borderWidth": "$theme.borders.border300.borderWidth",
  "boxShadow": "$theme.lighting.shadow400",
  "display": "flex",
  "height": "$theme.sizing.scale800",
  "justifyContent": "center",
  "width": "$theme.sizing.scale800",
}
`;

exports[`Checkbox styled components StyledToggleInner StyledToggleInner snap: StyledToggleInner has correct default styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono600",
  "borderRadius": "$theme.borders.radius100",
  "height": "$theme.sizing.scale300",
  "width": "$theme.sizing.scale0",
}
`;

exports[`Checkbox styled components StyledToggleTrack StyledToggleTrack snap: StyledToggleTrack has correct default styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "$theme.colors.tickFill",
  "borderRadius": "$theme.borders.radius200",
  "display": "flex",
  "height": "$theme.sizing.scale600",
  "justifyContent": "flex-start",
  "marginBottom": "$theme.sizing.scale100",
  "marginLeft": "$theme.sizing.scale100",
  "marginRight": "$theme.sizing.scale100",
  "marginTop": "$theme.sizing.scale100",
  "width": "$theme.sizing.scale1000",
}
`;
